crates/analyzer/tests/snapshots/errors__aug_assign_non_numeric.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The types for this operation must be numeric
  ┌─ [snippet]:5:3
  │
5 │   a += b
  │   ^    ^


