crates/analyzer/tests/snapshots/errors__bad_map3.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` expects 2 arguments, but 0 were provided
  ┌─ [snippet]:3:6
  │
3 │   x: Map<>
  │      ^^^-- supplied 0 arguments
  │      │   
  │      expects 2 arguments


