crates/analyzer/tests/snapshots/errors__binary_op_lshift_with_int.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The right hand side of this operation must be unsigned
  ┌─ [snippet]:5:8
  │
5 │   a << b
  │        ^ incompatible signed numeric


