crates/analyzer/tests/snapshots/errors__call.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `my_test` is a test function
  ┌─ compile_errors/test_call.fe:2:5
  │
2 │     my_test()
  │     ^^^^^^^ test functions are not callable


