crates/analyzer/tests/snapshots/errors__circular_struct.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: recursive struct definition
  ┌─ compile_errors/circular_struct.fe:1:1
  │  
1 │ ╭ struct Foo:
2 │ │   bar: Bar
  │ ╰──────────^

error: recursive struct definition
  ┌─ compile_errors/circular_struct.fe:4:1
  │  
4 │ ╭ struct Bar:
5 │ │   foo: Foo
  │ ╰──────────^


