crates/analyzer/tests/snapshots/errors__dep_unavailable_source.snap
---
source: crates/analyzer/tests/errors.rs
assertion_line: 344
expression: error_string_ingot(&path)
---
Unable to clone git dependency example_a.
unexpected http status code: 404; class=Http (34)
