crates/analyzer/tests/snapshots/errors__duplicate_event_in_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: duplicate event definitions in `contract Foo`
  ┌─ compile_errors/duplicate_event_in_contract.fe:2:5
  │    
2 │ ╭       event MyEvent:
3 │ │           idx addr1: address
  │ ╰────────────────────────────^ `event MyEvent` first defined here
4 │     
5 │   ╭     event MyEvent:
6 │   │         idx addr1: address
  │   ╰──────────────────────────' `event MyEvent` redefined here


